--- a/client/src/App.css
+++ b/client/src/App.css
@@ -14,13 +14,21 @@
 
 .text-box {
   text-align: center;
-  padding-top: 10rem;
+  padding-top: 15%;
   color: rgb(233, 233, 233);
 }
 
 .primary-text {
   display: block;
   font-size: 2.5em;
+}
+
+.secondary-text {
+  font-size: 15px;
+}
+
+.buttons {
+  margin-top: 10rem;
 }
 
 .btn {
